--- a/src/hellopipeline_assets/src/index.html
+++ b/src/hellopipeline_assets/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>hellosnapshot1</title>
+    <title>hellopipeline</title>
     <base href="/">
 
     <link type="text/css" rel="stylesheet" href="main.css" />
@@ -12,14 +12,14 @@
     
     <img src="icpipeline-logo.png" width=300px>
     <p id="helloTitle">
-      hellosnapshot1
+      Hello Pipeline!
     </p>
     <img src="logo.png" alt="DFINITY logo" width=150px/>
 
     <section>
-        <label for="name">Enter your name: &nbsp;</label>
-        <input id="name" alt="Name" type="text" />
-        <button id="clickMeBtn">Click Here!</button>
+      <label for="name">Enter your name: &nbsp;</label>
+      <input id="name" alt="Name" type="text" />
+      <button id="clickMeBtn">Click Here!</button>
     </section>
     <section id="greeting"></section>
     <hr>
@@ -50,7 +50,13 @@
       <button id="doBackupBtn">Inititate Backup</button>
       <button id="clearDataBtn">Clear Data</button>
     </section>
-    <br/>
+    <hr>
+    <section>
+    <section id="explanation" >
+       This :: hellopipeline :: project is an example dfx project as an extension of the Dfinity hello example. This one has been extended to provide an exemplification of the features available in the <a href="https://icpipeline.com" style="display: inline;" target="_blank"> ICPipeline </a> and <a href="https://icarchive.com" style="display: inline;" target="_blank" > ICArchive </a> development solutions. 
+       For each submission the History objects will store them and then can be used to demonstrate Internet Identity, snapshots, and ICArchive solutions as provided by ICPipeline.
+    </section>
+  </section>
 
 </body> 
 </html>
