--- a/src/hellopipeline_assets/src/index.html
+++ b/src/hellopipeline_assets/src/index.html
@@ -47,7 +47,7 @@
       Buttons:
     </p>
     <section>
-      <button id="doBackupBtn">Inititate Backup</button>
+      <!-- <button id="doBackupBtn">Inititate Backup</button> -->
       <button id="clearDataBtn">Clear Data</button>
     </section>
     <hr>
