removed backup button for the moment2

--- a/src/hellopipeline_assets/src/index.html
+++ b/src/hellopipeline_assets/src/index.html
@@ -47,13 +47,13 @@
       Buttons:
     </p>
     <section>
-      <!-- <button id="doBackupBtn">Inititate Backup</button> -->
+      <button id="doBackupBtn" disabled>Inititate Backup</button>
       <button id="clearDataBtn">Clear Data</button>
     </section>
     <hr>
     <section>
     <section id="explanation" >
-       This :: hellopipeline :: project is an example dfx project as an extension of the Dfinity hello example. This one has been extended to provide an exemplification of the features available in the <a href="https://icpipeline.com" style="display: inline;" target="_blank"> ICPipeline </a> and <a href="https://icarchive.com" style="display: inline;" target="_blank" > ICArchive </a> development solutions. 
+       This :: hellopipeline :: project is an example dfx project as an extension of the Dfinity hello example. This one has been extended to provide an exemplification of the features available in the <a href="https://icpipeline.com" style="display: inline;" target="_blank"> ICPipeline</a> and <a href="https://icarchive.com" style="display: inline;" target="_blank" > ICArchive</a> development solutions. 
        For each submission the History objects will store them and then can be used to demonstrate Internet Identity, snapshots, and ICArchive solutions as provided by ICPipeline.
     </section>
   </section>
